Versão enviada para a banca.

--- a/bibliothek.bib
+++ b/bibliothek.bib
@@ -10,11 +10,8 @@
 	Pages = {35},
 	Publisher = {American Society of Mechanical Engineers},
 	Title = {{A New Approach to Linear Filtering and Prediction Problems}},
-	Url = {http://fluidsengineering.asmedigitalcollection.asme.org/article.aspx?articleid=1430402},
 	Volume = {82},
-	Year = {1960},
-	Bdsk-Url-1 = {http://fluidsengineering.asmedigitalcollection.asme.org/article.aspx?articleid=1430402},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1115/1.3662552}}
+	Year = {1960}}
 
 @book{Beazley2009,
 	Abstract = {4th ed. Includes index. Python Essential Reference is the definitive reference guide to the Python programming language--the one authoritative handbook that reliably untangles and explains both the core Python library. Designed for the practicing programmer, the book is concise, to the point, and highly accessible. It also includes detailed information on the Python library and many advanced subjects that is not available in either the official Python documentation or any other single reference source. Thoroughly updated to reflect the significant new programming language features and library modules that have been introduced in Python 2.6 and Python 3, the fourth edition of Python Essential Reference is the complete guide for programmers who need to modernize existing Python code or who are planning an eventual migration to Python 3. A tutorial introduction -- Lexical conventions and syntax -- Types and objects -- OPerators and expressions -- Program structure and control flow -- Functions and functional programming -- Classes and object-oriented programming -- Modules, packages, and distribution -- Input and output -- Execution environment -- Testing, debugging, profiling, and tuning -- Built-in functions -- Python runtime services -- Mathematics -- Data structures, algorithms, and code simplification -- String and text handling -- Python database access -- File and directory handling -- Operating system services -- Threads and concurrency -- Network programming and sockets -- Internet application programming -- Web programming -- Internet data handling and encoding -- Miscellaneous library modules -- Extending and embedding python.},
@@ -32,9 +29,7 @@
 	Pages = {853},
 	Publisher = {Wiley-Interscience},
 	Title = {{Nonlinear programming : theory and algorithms}},
-	Url = {https://www.wiley.com/en-br/Nonlinear+Programming:+Theory+and+Algorithms,+3rd+Edition-p-9780471486008},
-	Year = {2006},
-	Bdsk-Url-1 = {https://www.wiley.com/en-br/Nonlinear+Programming:+Theory+and+Algorithms,+3rd+Edition-p-9780471486008}}
+	Year = {2006}}
 
 @book{Rawlings2009,
 	Abstract = {Getting started with model predictive control -- Model predictive control : regulation -- Robust model predictive control -- State estimation -- Output model predictive control -- Distributed model predictive control -- Explicit control laws for constrained linear systems.},
@@ -46,7 +41,6 @@
 	Year = {2009}}
 
 @book{Camacho2007,
-	Abstract = {2nd ed. From power plants to sugar refining, model predictive control (MPC) schemes have established themselves as the preferred control strategies for a wide variety of processes. The second edition of Model Predictive Control provides a thorough introduction to theoretical and practical aspects of the most commonly used MPC strategies. It bridges the gap between the powerful but often abstract techniques of control researchers and the more empirical approach of practitioners. Model Predictive Control demonstrates that a powerful technique does not always require complex control algorithms. The text features material on the following subjects: general MPC elements and algorithms; commercial MPC schemes; generalized predictive control multivariable, robust, constrained nonlinear and hybrid MPC; fast methods for MPC implementation; applications. All of the material is thoroughly updated for the second edition with the chapters on nonlinear MPC, MPC and hybrid systems and MPC implementation being entirely new. Many new exercises and examples have also have also been added throughout and Matlab{\textregistered} programs to aid in their solution can be downloaded from the authors' website at http://www.esi.us.es/MPCBOOK. The text is an excellent aid for graduate and advanced undergraduate students and will also be of use to researchers and industrial practitioners wishing to keep abreast of a fast-moving field. Introduction to Model Predictive Control -- Model Predictive Controllers -- Commercial Model Predictive Control Schemes -- Generalized Predictive Control -- Simple Implementation of GPC for Industrial Processes -- Multivariable Model Predictive Control -- Constrained Model Predictive Control -- Robust Model Predictive Control -- Nonlinear Model Predictive Control -- Model Predictive Control and Hybrid Systems -- Fast Methods for Implementing Model Predictive Control -- Applications.},
 	Author = {Camacho, E. F. and Bordons, C. (Carlos)},
 	Isbn = {9781852336943},
 	Publisher = {Springer},
@@ -70,13 +64,9 @@
 	Publisher = {Springer London},
 	Series = {Advanced Textbooks in Control and Signal Processing},
 	Title = {{Model Predictive control}},
-	Url = {http://link.springer.com/10.1007/978-0-85729-398-5},
-	Year = {2007},
-	Bdsk-Url-1 = {http://link.springer.com/10.1007/978-0-85729-398-5},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1007/978-0-85729-398-5}}
+	Year = {2007}}
 
 @book{Camacho2007b,
-	Abstract = {2nd ed. From power plants to sugar refining, model predictive control (MPC) schemes have established themselves as the preferred control strategies for a wide variety of processes. The second edition of Model Predictive Control provides a thorough introduction to theoretical and practical aspects of the most commonly used MPC strategies. It bridges the gap between the powerful but often abstract techniques of control researchers and the more empirical approach of practitioners. Model Predictive Control demonstrates that a powerful technique does not always require complex control algorithms. The text features material on the following subjects: general MPC elements and algorithms; commercial MPC schemes; generalized predictive control multivariable, robust, constrained nonlinear and hybrid MPC; fast methods for MPC implementation; applications. All of the material is thoroughly updated for the second edition with the chapters on nonlinear MPC, MPC and hybrid systems and MPC implementation being entirely new. Many new exercises and examples have also have also been added throughout and Matlab{\textregistered} programs to aid in their solution can be downloaded from the authors' website at http://www.esi.us.es/MPCBOOK. The text is an excellent aid for graduate and advanced undergraduate students and will also be of use to researchers and industrial practitioners wishing to keep abreast of a fast-moving field. Introduction to Model Predictive Control -- Model Predictive Controllers -- Commercial Model Predictive Control Schemes -- Generalized Predictive Control -- Simple Implementation of GPC for Industrial Processes -- Multivariable Model Predictive Control -- Constrained Model Predictive Control -- Robust Model Predictive Control -- Nonlinear Model Predictive Control -- Model Predictive Control and Hybrid Systems -- Fast Methods for Implementing Model Predictive Control -- Applications.},
 	Author = {Camacho, E. F. and Bordons, C. (Carlos)},
 	Isbn = {9780857293985},
 	Publisher = {Springer},
@@ -88,120 +78,84 @@
 	Doi = {10.1007/978-0-85729-398-5_10},
 	Pages = {289--310},
 	Title = {{Model Predictive Control and Hybrid Systems}},
-	Url = {http://link.springer.com/10.1007/978-0-85729-398-5{\_}10},
-	Year = {2007},
-	Bdsk-Url-1 = {http://link.springer.com/10.1007/978-0-85729-398-5%7B%5C_%7D10},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1007/978-0-85729-398-5_10}}
+	Year = {2007}}
 
 @incollection{Camacho2007d,
 	Author = {Camacho, E. F. and Bordons, C.},
 	Doi = {10.1007/978-0-85729-398-5_12},
 	Pages = {337--380},
 	Title = {{Applications}},
-	Url = {http://link.springer.com/10.1007/978-0-85729-398-5{\_}12},
-	Year = {2007},
-	Bdsk-Url-1 = {http://link.springer.com/10.1007/978-0-85729-398-5%7B%5C_%7D12},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1007/978-0-85729-398-5_12}}
+	Year = {2007}}
 
 @incollection{Camacho2007e,
 	Author = {Camacho, E. F. and Bordons, C.},
 	Doi = {10.1007/978-0-85729-398-5_11},
 	Pages = {311--336},
 	Title = {{Fast Methods for Implementing Model Predictive Control}},
-	Url = {http://link.springer.com/10.1007/978-0-85729-398-5{\_}11},
-	Year = {2007},
-	Bdsk-Url-1 = {http://link.springer.com/10.1007/978-0-85729-398-5%7B%5C_%7D11},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1007/978-0-85729-398-5_11}}
+	Year = {2007}}
 
 @incollection{Camacho2007f,
 	Author = {Camacho, E. F. and Bordons, C.},
 	Doi = {10.1007/978-0-85729-398-5_9},
 	Pages = {249--288},
 	Title = {{Nonlinear Model Predictive Control}},
-	Url = {http://link.springer.com/10.1007/978-0-85729-398-5{\_}9},
-	Year = {2007},
-	Bdsk-Url-1 = {http://link.springer.com/10.1007/978-0-85729-398-5%7B%5C_%7D9},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1007/978-0-85729-398-5_9}}
+	Year = {2007}}
 
 @incollection{Camacho2007g,
 	Author = {Camacho, E. F. and Bordons, C.},
 	Doi = {10.1007/978-0-85729-398-5_8},
 	Pages = {217--248},
 	Title = {{Robust Model Predictive Control}},
-	Url = {http://link.springer.com/10.1007/978-0-85729-398-5{\_}8},
-	Year = {2007},
-	Bdsk-Url-1 = {http://link.springer.com/10.1007/978-0-85729-398-5%7B%5C_%7D8},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1007/978-0-85729-398-5_8}}
+	Year = {2007}}
 
 @incollection{Camacho2007h,
 	Author = {Camacho, E. F. and Bordons, C.},
 	Doi = {10.1007/978-0-85729-398-5_7},
 	Pages = {177--216},
 	Title = {{Constrained Model Predictive Control}},
-	Url = {http://link.springer.com/10.1007/978-0-85729-398-5{\_}7},
-	Year = {2007},
-	Bdsk-Url-1 = {http://link.springer.com/10.1007/978-0-85729-398-5%7B%5C_%7D7},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1007/978-0-85729-398-5_7}}
+	Year = {2007}}
 
 @incollection{Camacho2007i,
 	Author = {Camacho, E. F. and Bordons, C.},
 	Doi = {10.1007/978-0-85729-398-5_1},
 	Pages = {1--11},
 	Title = {{Introduction to Model Predictive Control}},
-	Url = {http://link.springer.com/10.1007/978-0-85729-398-5{\_}1},
-	Year = {2007},
-	Bdsk-Url-1 = {http://link.springer.com/10.1007/978-0-85729-398-5%7B%5C_%7D1},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1007/978-0-85729-398-5_1}}
+	Year = {2007}}
 
 @incollection{Camacho2007j,
 	Author = {Camacho, E. F. and Bordons, C.},
 	Doi = {10.1007/978-0-85729-398-5_5},
 	Pages = {81--126},
 	Title = {{Simple Implementation of GPC for Industrial Processes}},
-	Url = {http://link.springer.com/10.1007/978-0-85729-398-5{\_}5},
-	Year = {2007},
-	Bdsk-Url-1 = {http://link.springer.com/10.1007/978-0-85729-398-5%7B%5C_%7D5},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1007/978-0-85729-398-5_5}}
+	Year = {2007}}
 
 @incollection{Camacho2007k,
 	Author = {Camacho, E. F. and Bordons, C.},
 	Doi = {10.1007/978-0-85729-398-5_2},
 	Pages = {13--30},
 	Title = {{Model Predictive Controllers}},
-	Url = {http://link.springer.com/10.1007/978-0-85729-398-5{\_}2},
-	Year = {2007},
-	Bdsk-Url-1 = {http://link.springer.com/10.1007/978-0-85729-398-5%7B%5C_%7D2},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1007/978-0-85729-398-5_2}}
+	Year = {2007}}
 
 @incollection{Camacho2007l,
 	Author = {Camacho, E. F. and Bordons, C.},
 	Doi = {10.1007/978-0-85729-398-5_3},
 	Pages = {31--46},
 	Title = {{Commercial Model Predictive Control Schemes}},
-	Url = {http://link.springer.com/10.1007/978-0-85729-398-5{\_}3},
-	Year = {2007},
-	Bdsk-Url-1 = {http://link.springer.com/10.1007/978-0-85729-398-5%7B%5C_%7D3},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1007/978-0-85729-398-5_3}}
+	Year = {2007}}
 
 @incollection{Camacho2007m,
 	Author = {Camacho, E. F. and Bordons, C.},
 	Doi = {10.1007/978-0-85729-398-5_6},
 	Pages = {127--176},
 	Title = {{Multivariable Model Predictive Control}},
-	Url = {http://link.springer.com/10.1007/978-0-85729-398-5{\_}6},
-	Year = {2007},
-	Bdsk-Url-1 = {http://link.springer.com/10.1007/978-0-85729-398-5%7B%5C_%7D6},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1007/978-0-85729-398-5_6}}
+	Year = {2007}}
 
 @incollection{Camacho2007n,
 	Author = {Camacho, E. F. and Bordons, C.},
 	Doi = {10.1007/978-0-85729-398-5_4},
 	Pages = {47--79},
 	Title = {{Generalized Predictive Control}},
-	Url = {http://link.springer.com/10.1007/978-0-85729-398-5{\_}4},
-	Year = {2007},
-	Bdsk-Url-1 = {http://link.springer.com/10.1007/978-0-85729-398-5%7B%5C_%7D4},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1007/978-0-85729-398-5_4}}
+	Year = {2007}}
 
 @article{DeJesusRubio2018,
 	Abstract = {In this investigation, a model free discrete time neural network control is designed for the trajectory tracking of a kind of nonlinear processes. The introduced control has three main characteristics: (1) the tracking error is used instead of the estimation error in the weights learning equations, avoiding the requirement of a good behavior estimation of the unknown elements in the nonlinear model, (2) the projection method is suggested to avoid the overfitting in the control law, and (3) the Lyapunov technique is utilized to assure the uniform stability of the tracking and weights errors. The suggested technique is applied in two nonlinear processes: the inverted-car and Furuta pendulums.},
@@ -213,11 +167,8 @@
 	Pages = {821--832},
 	Publisher = {Elsevier},
 	Title = {{Discrete time control based in neural networks for pendulums}},
-	Url = {https://www.sciencedirect.com/science/article/pii/S1568494617302387},
 	Volume = {68},
-	Year = {2018},
-	Bdsk-Url-1 = {https://www.sciencedirect.com/science/article/pii/S1568494617302387},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1016/J.ASOC.2017.04.056}}
+	Year = {2018}}
 
 @article{Schluse2018,
 	Author = {Schluse, Michael and Priggemeyer, Marc and Atorf, Linus and Rossmann, Juergen},
@@ -228,11 +179,8 @@
 	Number = {4},
 	Pages = {1722--1731},
 	Title = {{Experimentable Digital Twins---Streamlining Simulation-Based Systems Engineering for Industry 4.0}},
-	Url = {http://ieeexplore.ieee.org/document/8289327/},
 	Volume = {14},
-	Year = {2018},
-	Bdsk-Url-1 = {http://ieeexplore.ieee.org/document/8289327/},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1109/TII.2018.2804917}}
+	Year = {2018}}
 
 @article{Lucia2011,
 	Author = {Lucia and Urriza, Isidro and Barragan, Luis A. and Navarro, Denis and Jimenez and Burdio, Jos},
@@ -243,11 +191,8 @@
 	Number = {2},
 	Pages = {853--860},
 	Title = {{Real-Time FPGA-Based Hardware-in-the-Loop Simulation Test Bench Applied to Multiple-Output Power Converters}},
-	Url = {http://ieeexplore.ieee.org/document/5677465/},
 	Volume = {47},
-	Year = {2011},
-	Bdsk-Url-1 = {http://ieeexplore.ieee.org/document/5677465/},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1109/TIA.2010.2102997}}
+	Year = {2011}}
 
 @article{Carlsson2012,
 	Author = {Carlsson, Henrik and Svensson, Bo and Danielsson, Fredrik and Lennartson, Bengt},
@@ -258,11 +203,8 @@
 	Number = {2},
 	Pages = {267--278},
 	Title = {{Methods for Reliable Simulation-Based PLC Code Verification}},
-	Url = {http://ieeexplore.ieee.org/document/6121945/},
 	Volume = {8},
-	Year = {2012},
-	Bdsk-Url-1 = {http://ieeexplore.ieee.org/document/6121945/},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1109/TII.2011.2182653}}
+	Year = {2012}}
 
 @inproceedings{Lopes2018,
 	Address = {Rio de Janeiro},
@@ -280,21 +222,14 @@
 	Pages = {1--8},
 	Publisher = {IEEE},
 	Title = {{Granular evolving fuzzy robust feedback linearization}},
-	Url = {http://ieeexplore.ieee.org/document/7954821/},
-	Year = {2017},
-	Bdsk-Url-1 = {http://ieeexplore.ieee.org/document/7954821/},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1109/EAIS.2017.7954821}}
+	Year = {2017}}
 
 @phdthesis{Barroso2017,
 	Author = {Barroso, N F},
-	Keywords = {masterthesis:neson-en},
-	Mendeley-Tags = {masterthesis:neson-en},
 	School = {CEFET-MG},
 	Title = {{Distributed parameters systems monitoring strategy based on Kalman observers (In Portuguese). Master thesis at Graduate Program on Electrical Engineering. Available at: goo.gl/oDYCdB.}},
-	Type = {Master Thesis},
-	Url = {goo.gl/oDYCdB},
-	Year = {2017},
-	Bdsk-Url-1 = {goo.gl/oDYCdB}}
+	Type = {Tese (Mestrado)},
+	Year = {2017}}
 
 @article{article:makhlouf,
 	Author = {Makhlouf, Am{\'{e}}ni and Marhic, Bruno and Delahoche, Laurent and Cl{\'{e}}rentin, Arnaud and Messaoud, Hassani},
@@ -317,8 +252,7 @@
 	Pages = {315--324},
 	Title = {{Stabilization and voltage regulation of the Buck DC-DC Converter using model predictive of Laguerre functions}},
 	Volume = {26},
-	Year = {2017},
-	Bdsk-Url-1 = {http://dx.doi.org/10.24846/v26i3y201707}}
+	Year = {2017}}
 
 @article{article:chenaru,
 	Author = {Chenaru, Oana and Popescu, Dan and Enache, Dragos and Ichim, Loretta},
@@ -343,8 +277,7 @@
 	Pages = {29--38},
 	Title = {{Generalized predictive controller for ball mill grinding circuit in the presence of feed-grindability variations}},
 	Volume = {25},
-	Year = {2016},
-	Bdsk-Url-1 = {http://dx.doi.org/10.24846/v25i1y201604}}
+	Year = {2016}}
 
 @inproceedings{Lopes2017,
 	Address = {Porto Alegre - RS},
@@ -359,8 +292,7 @@
 	Title = {{Lachesis}},
 	Url = {https://github.com/acristoffers/lachesis},
 	Urldate = {2018-05-23},
-	Year = {2017},
-	Bdsk-Url-1 = {https://github.com/acristoffers/lachesis}}
+	Year = {2017}}
 
 @misc{moirai,
 	Author = {Sousa, {\'{A}}lan Cr{\'{i}}stoffer},
@@ -368,8 +300,7 @@
 	Title = {{Moirai}},
 	Url = {https://github.com/acristoffers/moirai},
 	Urldate = {2018-05-23},
-	Year = {2017},
-	Bdsk-Url-1 = {https://github.com/acristoffers/moirai}}
+	Year = {2017}}
 
 @misc{Sousa2016,
 	Author = {Sousa, {\'{A}}lan Cr{\'{i}}stoffer},
@@ -377,8 +308,7 @@
 	Title = {{AHIO}},
 	Url = {https://github.com/acristoffers/ahio},
 	Urldate = {2018-05-23},
-	Year = {2016},
-	Bdsk-Url-1 = {https://github.com/acristoffers/ahio}}
+	Year = {2016}}
 
 @article{article:cutler,
 	Author = {Cutler, C.R. and Ramaker, B.L},
@@ -399,11 +329,8 @@
 	Pages = {366--367},
 	Publisher = {Taylor {\&} Francis},
 	Title = {{Applied Optimal Control: Optimization, Estimation, and Control}},
-	Url = {http://ieeexplore.ieee.org/document/4310229/},
 	Volume = {9},
-	Year = {1979},
-	Bdsk-Url-1 = {http://ieeexplore.ieee.org/document/4310229/},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1109/TSMC.1979.4310229}}
+	Year = {1979}}
 
 @article{article:bode,
 	Author = {Bode, Hendrik Wade},
@@ -425,11 +352,8 @@
 	Pages = {667--682},
 	Pmid = {25241313},
 	Title = {{Model predictive control: past, present and future}},
-	Url = {http://www.sciencedirect.com/science/article/pii/S0098135498003019},
 	Volume = {23},
-	Year = {1999},
-	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0098135498003019},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1016/S0098-1354(98)00301-9}}
+	Year = {1999}}
 
 @article{article:lyapunov,
 	Annote = {Tradu{\c{c}}{\~{a}}o do artigo original publicado em 1892 an Comm. Soc. Math. Kharkow e reimpresso como Vol. 17 em Ann. Math Studies, Princeton University Press, Princeton, N.J., 1949.},
@@ -438,12 +362,11 @@
 	Pages = {203--474},
 	Publisher = {GAUTHIER-VILLARS, IMPRIMEUR-EDITEUR ; ED. PRIVAT, IMPRIMEUR-LIBRAIRE},
 	Title = {{Probl{\`{e}}me G{\'{e}}n{\'{e}}ral de la Stabilit{\'{e}} du Mouvement}},
-	Url = {http://eudml.org/doc/72801},
 	Volume = {9},
-	Year = {1892},
-	Bdsk-Url-1 = {http://eudml.org/doc/72801}}
+	Year = {1892}}
 
 @article{article:black,
+	Title = {{Stabilized Feedback Amplifiers}},
 	Abstract = {This paper describes and explains the theory of the Feed-back principle and demonstrates how stability of amplification, reduction of modulation products, and certain other advantages follow when stabilized feed-back is applied to an amplifier. The underlying principle of design by means of which ``singing'' is avoided also is set Forth. The paper concludes with some examples of results obtained on amplifiers which have been built employing this new principle.},
 	Author = {Black, H. S.},
 	Doi = {10.1002/j.1538-7305.1934.tb00652.x},
@@ -451,10 +374,8 @@
 	Journal = {Bell System Technical Journal},
 	Number = {1},
 	Pages = {1--18},
-	Title = {{Stabilized Feedback Amplifiers}},
 	Volume = {13},
-	Year = {1934},
-	Bdsk-Url-1 = {http://dx.doi.org/10.1002/j.1538-7305.1934.tb00652.x}}
+	Year = {1934}}
 
 @phdthesis{article:zhang,
 	Author = {Zhang, Xi},
@@ -481,19 +402,15 @@
 	Booktitle = {Proc. 4th IFAC Nonlinear Model Predictive Control {\ldots}},
 	File = {:Users/Alan/Google Drive/Documents/Universit{\"{a}}ten/CEFET/2018.1/TCC I/Bibliografia/Di Cairano/An Industry Perspective on MPC in Large Volumes Applications - Potential Benefits and Open Challenges/An Industry Perspective on MPC in Large Volumes Applications - Potential Benefits and Open Challenges.pdf:pdf},
 	Title = {{An industry perspective on MPC in large volumes applications: Potential Benefits and Open Challenges}},
-	Url = {http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.374.9189{\&}rep=rep1{\&}type=pdf},
-	Year = {2012},
-	Bdsk-Url-1 = {http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.374.9189%7B%5C&%7Drep=rep1%7B%5C&%7Dtype=pdf}}
+	Year = {2012}}
 
 @mastersthesis{masterthesis:nelson,
 	Author = {Barroso, N F},
 	File = {:Users/Alan/Google Drive/Documents/Universit{\"{a}}ten/CEFET/2018.1/TCC I/Bibliografia/Nelson de Figueiredo Barroso/Estrat{\'{e}}gia de monitoramento de sistemas distribu{\'{i}}dos baseada em observadores do tipo Kalman.pdf:pdf},
 	School = {CEFET-MG},
 	Title = {{Estrat{\'{e}}gia de monitoramento de sistemas distribu{\'{i}}dos baseada em observadores do tipo Kalman}},
-	Type = {Master Thesis},
-	Url = {https://goo.gl/oDYCdB},
-	Year = {2017},
-	Bdsk-Url-1 = {https://goo.gl/oDYCdB}}
+	Type = {Tese (Mestrado)},
+	Year = {2017}}
 
 @inproceedings{article:shang,
 	Author = {Forbes, J.F. and Guay, M.},
@@ -506,31 +423,27 @@
 	Number = {l},
 	Pages = {4383--4388},
 	Title = {{Characteristics-based model predictive control of distributed parameter systems}},
-	Url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=1025336},
 	Volume = {6},
-	Year = {2002},
-	Bdsk-Url-1 = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=1025336},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1109/ACC.2002.1025336}}
+	Year = {2002}}
 
 @misc{misc:valle-silva,
 	Annote = {Trabalho de Conclus{\~{a}}o de Curso em Engenharia Mecatr{\^{o}}nica no CEFET-MG},
 	Author = {Silva, J V Valle},
 	File = {:Users/Alan/Google Drive/Documents/Universit{\"{a}}ten/CEFET/2018.1/TCC I/Bibliografia/J{\^{o}}nathas Vin{\'{i}}cius do Valle Silva/Modelagem Matem{\'{a}}tica a par{\^{a}}metros distribu{\'{i}}dos e Controle em Malha Fechada de um sistema de aquecimento de ar.pdf:pdf},
 	Institution = {CEFET-MG},
+	Scool = {CEFET-MG},
 	Title = {{Modelagem Matem{\'{a}}tica a par{\^{a}}metros distribu{\'{i}}dos e Controle em Malha Fechada de um sistema de aquecimento de ar}},
-	Url = {https://goo.gl/LTFRw8},
-	Year = {2014},
-	Bdsk-Url-1 = {https://goo.gl/LTFRw8}}
+	Year = {2014}}
 
-@misc{misc:nelson,
+@phdthesis{misc:nelson,
 	Annote = {Trabalho de Conclus{\~{a}}o de Curso em Engenharia Mecatr{\^{o}}nica no CEFET-MG},
 	Author = {Barroso, N F},
 	File = {:Users/Alan/Google Drive/Documents/Universit{\"{a}}ten/CEFET/2018.1/TCC I/Bibliografia/Nelson de Figueiredo Barroso/Instrumentac{\~{a}}o Virtual Aplicada {\`{a}} Automa{\c{c}}{\~{a}}o de um Sistema T{\'{e}}rmico para Experimenta{\c{c}}{\~{a}}o Via Web.pdf:pdf},
 	Institution = {CEFET-MG},
+	School = {CEFET-MG},
 	Title = {{Instrumenta{\c{c}}{\~{a}}o Virtual Aplicada {\`{a}} Automa{\c{c}}{\~{a}}o de um Sistema T{\'{e}}rmico para Experimenta{\c{c}}{\~{a}}o Via Web}},
-	Url = {https://goo.gl/uff757},
 	Year = {2015},
-	Bdsk-Url-1 = {https://goo.gl/uff757}}
+	Type= {TCC}}
 
 @book{book:ogata,
 	Abstract = {For senior or graduate-level students taking a first course in Control Theory (in departments of Mechanical, Electrical, Aerospace, and Chemical Engineering). A comprehensive, senior-level textbook for control engineering. Ogata's Modern Control Engineering, 5/e , offers the comprehensive coverage of continuous-time control systems that all senior students must have, including frequency response approach, root-locus approach, and state-space approach to analysis and design of control systems. The text provides a gradual development of control theory, shows how to solve all computational problems with MATLAB, and avoids highly mathematical arguments. A wealth of examples and worked problems are featured throughout the text. The new edition includes improved coverage of Root-Locus Analysis (Chapter 6) and Frequency-Response Analysis (Chapter 8). The author has also updated and revised many of the worked examples and end-of-chapter problems. This text is ideal for control systems engineers.},
@@ -549,11 +462,8 @@
 	Primaryclass = {cond-mat},
 	Publisher = {Pearson},
 	Title = {{Modern control engineering}},
-	Url = {http://ieeexplore.ieee.org/document/1100013/},
 	Volume = {17},
-	Year = {1972},
-	Bdsk-Url-1 = {http://ieeexplore.ieee.org/document/1100013/},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1109/TAC.1972.1100013}}
+	Year = {1972}}
 
 @book{book:dorf,
 	Abstract = {Modern Control Systems, 12e, is ideal for an introductory undergraduate course in control systems for engineering students. Written to be equally useful for all engineering disciplines, this text is organized around the concept of control systems theory as it has been developed in the frequency and time domains. It provides coverage of classical control, employing root locus design, frequency and response design using Bode and Nyquist plots. It also covers modern control methods based on state variable models including pole placement design techniques with full-state feedback controllers and full-state observers. Many examples throughout give students ample opportunity to apply the theory to the design and analysis of control systems. Incorporates computer-aided design and analysis using MATLAB and LabVIEW MathScript.},
@@ -563,9 +473,7 @@
 	Pages = {1104},
 	Publisher = {Pearson},
 	Title = {{Modern Control Systems}},
-	Url = {https://goo.gl/kKU1vj},
-	Year = {2010},
-	Bdsk-Url-1 = {https://goo.gl/kKU1vj}}
+	Year = {2010}}
 
 @article{article:clarke,
 	Abstract = {Three-term or PID regulators are deservedly popular in industrial control systems. They give satisfactory performance for a wide class of processes, they are readily understood by technical plant personnel, and they are easy to implement using analogue or digital hardware. Stable elimination of offset due to load-disturbances is a principal control requirement, as in many cases processes are operated continuously at a fixed set-point Often this is achieved by the PI terms alone, though derivative action can be added for plant with excessive phase lag. In practice, however, nonlinear behaviour such as actuator saturation is a critical component of overall performance. This report discusses various forms of the PID regulator (positional, incremental, cascade, etc) and their closed-loop properties. Practical features such as avoidance of 'integral windup' and 'derivative kick' are described. The ways in which the PID algorithm can be discretised for use in a digital computer are outlined, together with appropriate Fortran coding. The effect of choice of sample interval on the discretised performance is analysed. Often the interval is chosen to be as short as possible given the computational power available; the influence of this on quantisation noise and offset is discussed Various filters are used in a discrete PID algorithm, including the anti-aliasing filter and a filter on derivative action. The properties of these filters are investigated and some interesting nonlinear filters, such as 'spike' filters are presented .},
@@ -577,11 +485,8 @@
 	Number = {6},
 	Pages = {305--316},
 	Title = {{PID algorithms and their computer implementation}},
-	Url = {http://tim.sagepub.com/content/6/6/305.abstract},
 	Volume = {6},
-	Year = {1984},
-	Bdsk-Url-1 = {http://tim.sagepub.com/content/6/6/305.abstract},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1177/014233128400600605}}
+	Year = {1984}}
 
 @article{article:nishikawa,
 	Abstract = {A method for automatic tuning of the PID process control parameters, usually called 'auto-tuning', is developed. The procedure of applying the method consists of (1) sampling a process response to a test input signal, (2) processing the sampled data for estimating characteristic values of the process, and (3) calculating the optimal values of the PID control parameters. For the optimization, a new type of performance index, i.e. a weighted integral of squared error is introduced. The procedure is implemented on a digital controller using microprocessors and applied to some real processes, yielding satisfactory results. {\textcopyright} 1984.},
@@ -595,8 +500,7 @@
 	Pages = {321--332},
 	Title = {{A method for auto-tuning of PID control parameters}},
 	Volume = {20},
-	Year = {1984},
-	Bdsk-Url-1 = {http://dx.doi.org/10.1016/0005-1098(84)90047-5}}
+	Year = {1984}}
 
 @book{book:wang,
 	Abstract = {Model predictive control (MPC) has a long history in the field of control en- gineering. It is one of the few areas that has received on-going interest from researchers in both the industrial and academic communities. Four major as- pects of model predictive control make the design methodology attractive to both practitioners and academics. The first aspect is the design formulation, which uses a completely multivariable system framework where the perfor- mance parameters of the multivariable control system are related to the engi- neering aspects of the system; hence, they can be understood and `tuned' by engineers. The second aspect is the ability of the method to handle both `soft' constraints and hard constraints in a multivariable control framework. This is particularly attractive to industry where tight profit margins and limits on the process operation are inevitably present. The third aspect is the ability to perform on-line process optimization. The fourth aspect is the simplicity of the design framework in handling all these complex issues. This book gives an introduction to model predictive control, and recent developments in design and implementation. Beginning with an overview of the field, the book will systematically cover topics in receding horizon con- trol, MPC design formulations, constrained control, Laguerre-function-based predictive control, predictive control using exponential data weighting, refor- mulation of classical predictive control, tuning of predictive control, as well as simulation and implementation using MATLAB and SIMULINK as a platform. Both continuous-time and discrete-time model predictive control is presented in a similar framework.},
@@ -615,10 +519,7 @@
 	Publisher = {Springer-Verlag London},
 	Series = {Advances in Industrial Control},
 	Title = {{Model Predictive Control System Design and Implementation Using MATLAB}},
-	Url = {https://goo.gl/czFKuq},
-	Year = {2009},
-	Bdsk-Url-1 = {https://goo.gl/czFKuq},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1007/978-1-84882-331-0}}
+	Year = {2009}}
 
 @article{article:martins,
 	Author = {Martins, Fg},
@@ -627,21 +528,17 @@
 	Number = {3},
 	Pages = {867--873},
 	Title = {{Tuning PID controllers using the ITAE criterion}},
-	Url = {http://pessoal.utfpr.edu.br/avargas/Ijee1673.pdf},
 	Volume = {21},
-	Year = {2005},
-	Bdsk-Url-1 = {http://pessoal.utfpr.edu.br/avargas/Ijee1673.pdf}}
+	Year = {2005}}
 
 @misc{misc:patwardhan,
 	Author = {Patwardhan, Sachin C},
 	File = {:Users/Alan/Google Drive/Documents/Universit{\"{a}}ten/CEFET/2018.1/TCC I/Bibliografia/Sachin C. Patwardhan/A Gentle Introduction to Model Predictive Control (MPC) Formulations based on Discrete Linear State Space Models/A Gentle Introduction to Model Predictive Control (MPC) Formulations based on Discrete Linear State Space Models.pdf:pdf},
 	Institution = {Indian Institute of Technology Bombay},
 	Title = {{A Gentle Introduction to Model Predictive Control (MPC) Formulations based on Discrete Linear State Space Models}},
-	Url = {https://www.iitk.ac.in/tkic/workshop/control techniques/ppt/patvardhan/LQG{\_}MPC{\_}Notes{\_}IITK{\_}2016.pdf},
-	Year = {2014},
-	Bdsk-Url-1 = {https://www.iitk.ac.in/tkic/workshop/control%20techniques/ppt/patvardhan/LQG%7B%5C_%7DMPC%7B%5C_%7DNotes%7B%5C_%7DIITK%7B%5C_%7D2016.pdf}}
+	Year = {2014}}
 
-@article{Ticlea2009,
+@article{article:ticlea,
 	abstract = {The paper presents the discrete-time counterpart of the continuous-time exponential forgetting factor observer. We obtain a Kalman-like observer to the extent that it relies on the uniform complete observability property specific to LTV systems and can be used to handle the estimation of state-affine systems. However, it does not require the complete uniform controllability property like the Kalman observer does. Like any other state observer it can be used for parameter estimation if the eventual unknown parameters are turned into state variables. This use of the observer is illustrated through an example of state and parameter estimation in the case of an AC machine.},
 	author = {Ţiclea, Alexandru and Besan{\c{c}}on, Gildas},
 	doi = {10.3182/20090706-3-FR-2004.00228},
@@ -654,7 +551,6 @@
 	pages = {1370--1374},
 	publisher = {Elsevier},
 	title = {{State and parameter estimation via discrete-time exponential forgetting factor observer}},
-	url = {https://www.sciencedirect.com/science/article/pii/S1474667016388425},
 	volume = {42},
 	year = {2009}
 }
@@ -665,4 +561,22 @@
 	School = {TUDelft},
 	Title = {{Fast MPC Solvers for Systems with Hard Real-Time Constraints}},
 	Year = {2016}
+}
+
+@article{article:seborg,
+	abstract = {A design method for PID controllers based on the direct synthesis approach and specification of the desired closed-loop transfer function for disturbances is proposed. Analytical expressions for PID controllers are derived for several common types of process models, including first-order and second-order plus time delay models and an integrator plus time delay model. Although the controllers are designed for disturbance rejection, the set-point responses are usually satisfactory and can be tuned independently via a set-point weighting factor. Nine simulation examples demonstrate that the proposed design method results in very good control for a wide variety of processes including those with integrating and/or nonminimum phase characteristics. The simulations show that the proposed design method provides better disturbance rejection than the standard direct synthesis and internal model control methods when the controllers are tuned to have the same degree of robustness.},
+	author = {Chen, Dan and Seborg, Dale E.},
+	doi = {10.1021/IE010756M},
+	publisher = {American Chemical Society},
+	title = {{PI/PID Controller Design Based on Direct Synthesis and Disturbance Rejection}},
+	year = {2002}
+}
+
+@phdthesis{phdthesis:caldeira,
+	author = {Caldeira, André},
+	keywords = {Analyse de stabilit{\'{e}} Synth{\`{e}}se de contr{\^{o}}le System{\`{e}}s,Stability Analysis Synthesis of control Hyperbolic},
+	month = {mar},
+	publisher = {Grenoble Alpes},
+	title = {{Techniques d'analyse de stabilit{\'{e}} et synth{\`{e}}se de contr{\^{o}}le pour des syst{\`{e}}mes hyperboliques}},
+	year = {2017}
 }
