--- a/miss_brasil.tex
+++ b/miss_brasil.tex
@@ -2,17 +2,16 @@
 % !TeX encoding = UTF-8 Unicode
 
 %======================================== Frase Miss Brasil ===================================
-\null\vfill
+\null{}
+\vfill{}
 \begin{flushright}
     \begin{minipage}{9.0cm}
-        A maravilhosa disposição e harmonia do universo só pode ter tido origem
-        segundo o plano de um Ser que tudo sabe e tudo pode.
-        Isto fica sendo a minha última e mais elevada descoberta.
+        Não há nada como um sonho para criar o futuro.
     \end{minipage}
 \end{flushright}
 
 \begin{flushright}
-    \href{http://www.fraseseproverbios.com/frases-de-isaac-newton.php}{Isaac Newton}
+    Victor Hugo
 \end{flushright}
 
 \cleardoublepage{}
