--- a/titlepage.tex
+++ b/titlepage.tex
@@ -72,7 +72,7 @@
         \vspace*{1cm}
 
         Orientador: Prof.\ Dr.\ Valter Júnior de Souza Leite\\
-        Co-orientador: Prof.\ Dr.\ Ignacio Rubio Scola
+        Coorientador: Prof.\ Dr.\ Ignacio Rubio Scola
     \end{minipage}
 \end{flushright}
 
