--- a/chapter3.tex
+++ b/chapter3.tex
@@ -5,54 +5,48 @@
 \label{chp:methodology}
 
 Para que a plataforma de controle possa se comunicar com o forno do laboratório
-de sinais e sistemas será necessário modificar o circuito de acionamento da
-mesma. Para isso serão utilizados circuitos microcontrolados que irão se
-comunicar com o circuito de acionamento e sensoriamento presente na mesma. Um
-estudo da forma como isso é feito hoje será realizado com a finalidade de
-inserir um circuito paralelo ao atual, de forma que o usuário possa escolher
-qual circuito de acionamento e aquisição de dados será utilizado.
+de sinais e sistemas foi necessário modificar o circuito de acionamento da
+mesma. Para isso foram utilizados circuitos microcontrolados que se comunicam
+com o circuito de acionamento e sensoriamento presente na mesma.
 
-Esse novo circuito será programado para se comunicar com a plataforma de
-controle. Um \textit{driver} será escrito para a mesma para permitir o controle
+Esse novo circuito foi programado para se comunicar com a plataforma de
+controle. Um \textit{driver} foi escrito para a mesma para permitir o controle
 dos atuadores e leitura dos sensores de forma transparente e específica para
-este sistema. O \textit{driver} irá abstrair a interface com o hardware de forma
-que o usuário não tenha que se preocupar com detalhes da implementação, como
-número de porta e pino, tensões de operação, etc.
+este sistema. O \textit{driver} abstrai a interface com o hardware de forma que
+o usuário não precise se preocupar com detalhes da implementação, como número de
+porta e pino, tensões de operação, etc.
 
-Para que se possa trabalhar com a planta também será necessário calibrar todos
-os sensores e atuadores, além de se fazer uma conferência dos circuitos
-elétricos, para certificar que estes ainda funcionam de forma correta. Todo este
-procedimento será feito usando-se a plataforma de controle para a aquisição de
-dados. Para isso será necessário estudar os trabalhos de~\textcite{misc:nelson}
-e~\textcite{misc:valle-silva}. Como prova de conceito, também será utilizado um
-computador portátil de baixo custo para o controle da planta.
+Também foi necessário calibrar todos os sensores e atuadores, além de confererir
+o funcionamento dos circuitos elétricos. Todo este procedimento foi feito
+usando-se a plataforma de controle para a aquisição de dados. Para isso foi
+necessário estudar os trabalhos de~\textcite{misc:nelson}
+e~\textcite{misc:valle-silva}.
 
-Os modelos levantados por~\textcite{masterthesis:nelson} serão validados no
-sistema físico. Isto é necessário para verificar que não houve alterações
+Os modelos levantados por~\textcite{masterthesis:nelson} foram validados no
+sistema físico. Isto foi necessário para verificar que não houve alterações
 significativas no sistema desde o seu desenvolvimento. Para o uso destes modelos
-será necessário estudar sobre sistemas a parâmetros distribuídos e observadores
+foi necessário estudar sobre sistemas a parâmetros distribuídos e observadores
 de Kalman.
 
-O controlador MPC será discreto no tempo e baseado em modelo em espaço de
-estados, logo será necessário estudar sobre controle digital e modelagem em
-espaço de estados, além da própria técnica de controle. Para isto serão
+O controlador MPC utilizado é discreto no tempo e baseado em modelo em espaço de
+estados, logo foi necessário estudar sobre controle digital e modelagem em
+espaço de estados, além da própria técnica de controle. Para isto foram
 utilizados, principalmente, os livros do~\textcite{book:dorf},
 do~\textcite{book:ogata}, do~\textcite{book:wang} e as notas de aula do
 Professor~\textcite{misc:patwardhan}.
 
-Para o desenvolvimento do controlador será utilizado o modelo SPD e serão
+Para o desenvolvimento do controlador foi utilizado o modelo SPD além de
 determinadas restrições do sinal de controle. Os estados utilizados no
-controlador serão os provenientes do observador do tipo Kalman utilizado
+controlador são os provenientes do observador do tipo Kalman utilizado
 pelo~\textcite{masterthesis:nelson}.
 
-Para comparar o desempenho do controlador MPC serão desenvolvidos controladores
-PI utilizando as técnicas descritas por~\textcite{article:clarke}
-e~\textcite{article:martins}. Serão utilizados os índices IAE e IVx para
+Para comparar o desempenho do controlador MPC foram desenvolvidos controladores
+PI por síntese direta. Utilizou-se os índices \(IAE\) e \(IA\Delta{}X\) para
 realizar uma comparação quantitativa dos controladores.
 
-Todos os controladores serão implementados utilizando a plataforma de controle e
-a linguagem de programação Python, assim como todos os testes que requeiram
-acionamento do forno e/ou medição de seus termômetros. Desta forma serão
+Todos os controladores foram implementados utilizando a plataforma de controle e
+a linguagem de programação Python, assim como todos os testes que que usem o
+acionamento do forno e/ou medição de seus termômetros. Desta forma foram
 corrigidos na plataforma todos os problemas percebidos na mesma do ponto de
-vista de usuário. Também serão implementadas as funcionalidades que se mostrem
-necessárias e/ou desejadas, visando seu aperfeiçoamento.
+vista de usuário. Também foram implementadas várias novas funcionalidades,
+visando seu aperfeiçoamento.
