--- a/dedicatoria.tex
+++ b/dedicatoria.tex
@@ -2,11 +2,12 @@
 % !TeX encoding = UTF-8 Unicode
 
 %======================================== Dedicatória =========================================
-\null\vfill
+\null{}
+\vfill{}
 \begin{flushright}
     \begin{minipage}{6.5cm}
-        {\textsc Faça aqui sua dedicatória.}
-    \end{minipage} \\[8mm]
+        \textsc{A minha família, que sempre me apoiou nessa caminhada.}
+    \end{minipage}\\[8mm]
 \end{flushright}
 
 \cleardoublepage{}
